--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 MONGO_URI=mongodb+srv://kangrow:kangrow@cluster0.pvccfr2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_secret_key_here
 
+PHONEPE_CLIENT_ID=SU2509091920287287979611
+PHONEPE_CLIENT_SECRET=cf10fdbb-3698-4e2a-b1d6-78dec9ba4a9f
+PHONEPE_CLIENT_VERSION=1
+PHONEPE_API_URL=https://api.phonepe.com/apis/pg
+PHONEPE_ENV=PRODUCTION
