--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "pg-sdk-node": "^2.0.2",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   }
